2012-09-27 Dan Locks <dwlocks@zmanda.com>
	* Bug reported by Jon LaBadie for fedora 17: spurious requirement
	  of libtermcap.so.2.
	* packaging/rpm/amanda.spec.src: massage fedora detection to remove
	  spurious requirement

2012-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Fix reps and reps_bucket name.

2012-09-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (get_multiplier): Fix for for CONF_END.

2012-09-25  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-dest-taper-splitter.c: Do not increase partnum if
	  the size is 0.
	* installcheck/Amanda_Xfer.pl: Fix partnum check.
	* perl/Amanda/Taper/Scribe.pm: Improve debugging.

2012-09-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amflock.c, common-src/util.c,
	  perl/Amanda/Header.swg, perl/Amanda/Taper/Worker.pm,
	  perl/Amanda/Util.swg,
	  server-src/xfer-dest-holding.c: Fix small memory leak.

2012-09-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scan/lexical.pm,
	  perl/Amanda/Taper/Scan/oldest.pm: Fix perl warning.

2012-09-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix for header not read.

2012-09-24  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml (part-size): Improve documentation.

2012-09-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm (device_started): Can get non-numeric
	result.

2012-09-21  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/tapelist.5.xml: Add BLOCKSIZE.

2012-09-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tapelist.swg: die() if tapelist is not valid.
	* server-src/tapefile.c: exit if tapelist is not valid.
	* installcheck/Amanda_Tapelist.pl: Add more check.
	* perl/Amanda/Changer.pm: Add $err->device
	* perl/Amanda/Changer/robot.pm: Return error if barcode do not match
	  with tapelist.